pod-behaviours-test.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: pod-behaviours-test
  name: pod-behaviours-test-examaple
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
      - containerPort: 80
    readinessProbe:
      tcpSocket:
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 10
    livenessProbe:
      tcpSocket:
        port: 80
      initialDelaySeconds: 15
      periodSeconds: 20
    imagePullPolicy: IfNotPresent
  restartPolicy: Never
