pod-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-example
spec:
  containers:
  - name: application-container
    image: busybox
    resources:
      limits:
        memory: "200Mi"
      requests:
        memory: "100Mi"    
    command: ['sh' , '-c', 'echo Hello K8s! && sleep 3600']
