pod-sidecar-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sidecar-pod
  labels:
    app: my-sidecar-pod
spec:
  volumes:
  - name: html
    emptyDir: {}
  containers:
  - name: main-application-container
    image: debian
    volumeMounts:
    - name: html
      mountPath: /html
    command: ['sh' , '-c']
    args:
      - while true; do date >> /html/index.html; sleep 1; done
  - name: sidecar-container
    image: nginx
    ports:
      - containerPort: 80
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
