secret-example-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-example-pod
  labels:
    app: secret-example-pod
spec:
  containers:
  - name: secret-example-container
    image: busybox
    command: ['sh' , '-c', 'echo Hello K8s! && echo prime passwrod:  $(PRIME_PASSWORD) && echo secondary password:  $(SEC_PASSWORD) && sleep 1200']
    volumeMounts:
    - mountPath: /tmp/
      name: api-credentials
      readOnly: true           
  volumes:
  - secret:
      secretName: my-api-credentials
    name: api-credentials
