service-blue-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-blue-green
spec:
  type: NodePort
  #type: LoadBalancer
  selector:
    app: nginx
    color: ${COLOR} 
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30122
