service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-headless-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx
  clusterIP: None
