stateful-set-nginx-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-sts-svc
  labels:
    app: nginx-sts
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: nginx-sts
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: nginx-sts # has to match .spec.template.metadata.labels
  serviceName: "nginx-sts-svc"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: nginx-sts # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: nginx-sts
        image: nginx:1.9.0
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
#      storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 1Gi
